566/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fault-injection
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
